--- a/src/messages_en.properties
+++ b/src/messages_en.properties
@@ -1,1 +1,11 @@
 bienvenido=Welcome
+listado=Trips List
+registrarse=Sign up
+iniciarSesion=Log in
+nosotros=About us
+identificador=identifier
+nombre=Name
+apellidos=Surname
+email=Email
+contraseña=Password
+confirmarContraseña=Confirm your password
