--- a/src/messages_es.properties
+++ b/src/messages_es.properties
@@ -1,1 +1,11 @@
 bienvenido=Bienvenido
+listado=Listado de viajes
+registrarse=Registrarse
+iniciarSesion=Iniciar Sesión
+nosotros=Sobre nosotros
+identificador=Identificador
+nombre=Nombre
+apellidos=Apellidos
+email=Email
+contraseña=Contraseña
+confirmarContraseña=Confirma tu contraseña
